objects/ssot__ContentDocument__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentDocumentPublishStatus__c</fullName>
        <label>Content Document Publish Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocument_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocument_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocument_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ContentDocument_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ContentModifiedDateTime__c</fullName>
        <label>Content Modified DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ContentModifiedDate__c</fullName>
        <label>Content Modified Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ContentSizeNumber__c</fullName>
        <label>Content Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileExtensionName__c</fullName>
        <label>File Extension</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FileType__c</fullName>
        <label>File Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Content Document Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastViewedDateTime__c</fullName>
        <label>Last Viewed DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestPublishedVersionId__c</fullName>
        <label>Latest Published Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325745080_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocument_LatestPublishedVersi_rel</label>
        <referenceTo>ssot__ContentDocumentVersion__dlm</referenceTo>
        <relationshipLabel>ContentDocument_LatestPublishedVersi_rel</relationshipLabel>
        <relationshipName>rel_1724325745080_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325771478_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocument_LastModifiedById_map_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocument_LastModifiedById_map_rel</relationshipLabel>
        <relationshipName>rel_1724325771478_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325774868_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocument_CreatedById_map_User_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocument_CreatedById_map_User_rel</relationshipLabel>
        <relationshipName>rel_1724325774868_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>